@@ -150,6 +150,7 @@ struct gretl_option gretl_opts[] = {
     { LMTEST,   OPT_P, "panel" },
     { LMTEST,   OPT_Q, "quiet" },
     { LMTEST,   OPT_W, "white" },
+    { LOGIT,    OPT_P, "p-values" },
     { LOGIT,    OPT_R, "robust" },
     { LOGIT,    OPT_V, "verbose" },
     { LOOP,     OPT_P, "progressive" },
@@ -212,6 +213,7 @@ struct gretl_option gretl_opts[] = {
     { PRINT,    OPT_L, "long" },
     { PRINT,    OPT_N, "no-dates" },
     { PRINT,    OPT_T, "ten" },
+    { PROBIT,   OPT_P, "p-values" },
     { PROBIT,   OPT_R, "robust" },
     { PROBIT,   OPT_V, "verbose" },
     { QUIT,     OPT_X, "exit" },
